--- a/src/main/resources/templates/gr/admin/login.html
+++ b/src/main/resources/templates/gr/admin/login.html
@@ -105,8 +105,8 @@
                 
                 <form class="position-relative" th:action="@{/admin/loginaction.do}" method="post" id="loginFrom">
                     <div class="content">
-                        <input class="loginInput" type="text" name="id" placeholder="아이디" autofocus><br>
-                        <input class="loginInput" type="password" name="pw" placeholder="암호"><br>
+                        <input class="loginInput" type="text" name="id" placeholder="아이디" value="admin1" autofocus><br>
+                        <input class="loginInput" type="password" name="pw" placeholder="암호" value="1"><br>
                         <input class="loginInput loginBtn" type="button" value="로그인" onclick="loginAction()">
                     </div>
                 </form>
