--- a/src/main/resources/templates/gr/admin/company.html
+++ b/src/main/resources/templates/gr/admin/company.html
@@ -209,7 +209,7 @@
             new simpleDatatables.DataTable("#datatablesSimple", {
                 searchable: true,
                 fixedHeight: true,
-                
+                paging: false
             })
         });
 
