--- a/src/main/resources/templates/gr/admin/customer.html
+++ b/src/main/resources/templates/gr/admin/customer.html
@@ -213,6 +213,7 @@
             new simpleDatatables.DataTable("#datatablesSimple", {
                 searchable: true,
                 fixedHeight: true,
+                paging: false
             })
         });
 
