--- a/src/main/resources/templates/km/admin/product.html
+++ b/src/main/resources/templates/km/admin/product.html
@@ -126,17 +126,7 @@
             
             <!-- -------------------------------------------------------------------------------------------------------------- -->
 
-            <!-- 검색 기능 ~  -->
-            <div id="seach_section" style="float: right;" class="mt-3">
-                <select id="searchOption" onclick="removeReceiveBtn()" th:style="'background-image: url(' + @{/images/km/downarrow.png} + ');'">
-                    <option  selected>선택</option>
-                    <option value="purchaseno">번호</option>
-                    <option value="memid">아이디</option>
-                </select>
-                <input type="text" id="searchInput" placeholder="검색" onclick="removeReceiveBtn()">
-                <button onclick="searchData()" class="btn btn-primary">검색</button>
-            </div>
-            <!-- ~ 검색 기능  -->
+            
 
             <br>
             <br>
@@ -151,8 +141,22 @@
                     <div class="col">
                         <div class="card mb-4">
                             <div class="card-header">
-                                <i class="fas fa-table me-1"></i>
-                                <span>고객 상품 수령 관리</span>
+                                <div style="display: inline-block;" class="mt-2">
+                                    <i class="fas fa-table me-1"></i>
+                                    <h5 style="display: inline-block;">고객 상품 수령 관리</h5>
+                                </div>
+
+                                <!-- 검색 기능 ~  -->
+                                <div id="seach_section" style="float: right;">
+                                    <select id="searchOption" onclick="removeReceiveBtn()" th:style="'background-image: url(' + @{/images/km/downarrow.png} + ');'">
+                                        <option  selected>선택</option>
+                                        <option value="purchaseno">번호</option>
+                                        <option value="memid">아이디</option>
+                                    </select>
+                                    <input type="text" id="searchInput" placeholder="검색" onclick="removeReceiveBtn()">
+                                    <button onclick="searchData()" class="btn btn-primary">검색</button>
+                                </div>
+                                <!-- ~ 검색 기능  -->
 
                             </div>
                             <div class="card-body">
