--- a/src/main/resources/templates/km/customer/checkout.html
+++ b/src/main/resources/templates/km/customer/checkout.html
@@ -476,56 +476,62 @@
         //             console.log("주문일시 : " + StringDate);
 
         //             const form1 = document.createElement("form");
-        //             form1.action = /*[[@{/customer/ordersuccess1.do}]]*/"";
-        //             form1.style.display = "none";
-        //             form1.method = "post";
+                        // form1.action = /*[[@{/customer/ordersuccess1.do}]]*/"";
+                        // form1.style.display = "none";
+                        // form1.method = "post";
 
-        //             const input1 = document.createElement("input");
-        //             input1.type = "hidden";
-        //             input1.name = "_csrf";
-        //             input1.value = /*[[${_csrf.token}]]*/"";
+                        // const input1 = document.createElement("input");
+                        // input1.type = "hidden";
+                        // input1.name = "_csrf";
+                        // input1.value = /*[[${_csrf.token}]]*/"";
 
-        //             const input2 = document.createElement("input");
-        //             input2.type = "hidden";
-        //             input2.name = "itemname";
-        //             input2.value = /*[[${obj.itemName}]]*/"";
+                        // const input2 = document.createElement("input");
+                        // input2.type = "hidden";
+                        // input2.name = "itemname";
+                        // input2.value = rsp.name;
 
-        //             const input3 = document.createElement("input");
-        //             input3.type = "hidden";
-        //             input3.name = "orderno";
-        //             input3.value = customer_id + makeMerchantUid;
+                        // const input3 = document.createElement("input");
+                        // input3.type = "hidden";
+                        // input3.name = "orderno";
+                        // input3.value = customer_id + makeMerchantUid;
 
-        //             const input4 = document.createElement("input");
-        //             input4.type = "hidden";
-        //             input4.name = "totalprice";
-        //             input4.value = totalPrice.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g,",") +'원';
+                        // const input4 = document.createElement("input");
+                        // input4.type = "hidden";
+                        // input4.name = "totalprice";
+                        // input4.value = totalPrice.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g,",") +'원';
 
-        //             const input5 = document.createElement("input");
-        //             input5.type = "hidden";
-        //             input5.name = "storagename";
-        //             input5.value = /*[[${storage.name}]]*/"";
+                        // const input5 = document.createElement("input");
+                        // input5.type = "hidden";
+                        // input5.name = "storagename";
+                        // input5.value = /*[[${storage.name}]]*/"";
 
-        //             const input6 = document.createElement("input");
-        //             input6.type = "hidden";
-        //             input6.name = "orderdate";
-        //             input6.value = StringDate;
+                        // const input6 = document.createElement("input");
+                        // input6.type = "hidden";
+                        // input6.name = "orderdate";
+                        // input6.value = StringDate;
 
-        //             const input7 = document.createElement("input");
-        //             input7.type = "hidden";
-        //             input7.name = "purchaseno";
-        //             input7.value = data.purchaseno;
+                        // const input7 = document.createElement("input");
+                        // input7.type = "hidden";
+                        // input7.name = "purchaseno";
+                        // input7.value = data.purchaseno;
 
-        //             form1.appendChild(input1);
-        //             form1.appendChild(input2);
-        //             form1.appendChild(input3);
-        //             form1.appendChild(input4);
-        //             form1.appendChild(input5);
-        //             form1.appendChild(input6);
-        //             form1.appendChild(input7);
+                        // const input8 = document.createElement("input");
+                        // input8.type = "hidden";
+                        // input8.name = "itemno";
+                        // input8.value = itemNo;
 
-        //             document.body.appendChild(form1);
+                        // form1.appendChild(input1);
+                        // form1.appendChild(input2);
+                        // form1.appendChild(input3);
+                        // form1.appendChild(input4);
+                        // form1.appendChild(input5);
+                        // form1.appendChild(input6);
+                        // form1.appendChild(input7);
+                        // form1.appendChild(input8);
 
-        //             form1.submit();
+                        // document.body.appendChild(form1);
+
+                        // form1.submit();
 
         //         } else {
         //             location.replace(/*[[@{/error}]]*/"");
