0613 주석 수정, 푸터 바닥 고정되게 수정

--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -38,7 +38,7 @@
 
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
-            <main>
+            <main style="margin-bottom: 250px;">
                 <div class="container-fluid px-4" > <!-- 옆쪽에 딱 붙음. -->
 
                     <h3 style="margin-top: 30px;">물품관리</h3>
