--- a/src/main/resources/templates/jk/seller/login.html
+++ b/src/main/resources/templates/jk/seller/login.html
@@ -33,11 +33,11 @@
 					<hr />
 					<br>
 					<div class="form-floating mb-2">
-						<input type="number" id="id" name="no" class="form-control" />
+						<input type="number" id="id" name="no" class="form-control" value="1078198143"/>
 						<label for="id" class="form-label">사업자번호</label>
 					</div>
 					<div class="form-floating mb-2 ">
-						<input type="password" id="pw" name="pw" class="form-control" onkeydown="capsLockCheck(event)" />
+						<input type="password" id="pw" name="pw" class="form-control" value="1q2w3e4r!" onkeydown="capsLockCheck(event)" />
 						<label id="pwLabel" for="pw" class="form-label">암호</label>
 					</div>
 					<br>
