--- a/src/main/resources/templates/mj/seller/itemimage/selectlist.html
+++ b/src/main/resources/templates/mj/seller/itemimage/selectlist.html
@@ -223,12 +223,14 @@
     </script>
 
     <script th:inline="javascript">
+        // 대표이미지 선택시 input(hidden)태그에 파일이름 표시.
         function setFileName(event) {
             const fileName = event.target.files[0].name;
             document.getElementById('image').value = fileName;
             console.log(fileName);
         }
 
+        // 상세이미지 선택시 input(hidden)태그에 파일이름 표시.
         function setFilesName(event) {
             const filesName = event.target.files[0].name;
             document.getElementById('images').value = filesName;
@@ -289,7 +291,7 @@
             return imagenoArray;
         }
 
-        //이미지 선택삭제
+        // 이미지 선택삭제
         async function deleteimages() {
             const imageno = getimageNo();
             if (imageno.length === 0) {
