--- a/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
+++ b/src/main/resources/templates/jk/seller/mypage/pwinfocheck.html
@@ -92,7 +92,7 @@
             if (oldPw.value == "") { // 현재비번칸이 비었을 시
                 alert("비밀번호를 입력해주세요."); //alert창
                 oldPw.focus(); // 빈 입력창으로 커서 이동
-                return false; // 아래 코드부터 아무것도 전달 안함.
+                return false; 
             }
 
             // @PostMapping 방식
