마이페이지에 비번 유효성 검사 추가, 기본 비번 변경

--- a/src/main/resources/templates/gr/customer/myinfochk.html
+++ b/src/main/resources/templates/gr/customer/myinfochk.html
@@ -281,15 +281,6 @@
             vertical-align: middle;
         }
 
-
-
-
-
-        
-
-
-         
-
         </style>
     </th:block>
 </head>
@@ -372,7 +363,8 @@
                 <div class="passwordchk-box">
                     <p class="chk_guide d-flex justify-content-center">회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
                     <div class="chkbox d-flex justify-content-center">
-                        <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw">
+                        <!-- <input type="password" placeholder="비밀번호를 입력해주세요." style="width: 420px;" id="pw" name="pw"> -->
+                        <input type="password" value="dlrudals" style="width: 420px;" id="pw" name="pw">
                         <button class="btn" type="submit" title="확인">확인</button>
                     </div>
                 </div>
